--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,13 @@
 
 #logo{
 	font-family: Verdana, Arial;
-	font-size: 28px;
+	font-size: 24px;
 	letter-spacing: 4px;
-	line-height: 75px;
+	line-height: 40px;
 	color: white;
-	text-align: center;
+	text-align: start;
 	width: 385px;
-	height: 80px;
+	height: 90px;
 	margin-bottom: 20px;
 	float: left;
 	text-transform: uppercase;
